Top down/logs/backend_debugger_20251128_203329.log

============================================================
BACKEND DEBUGGER - Starting Project
============================================================
Project path: C:\Users\ASUS\Desktop\Codes\POME\Top down\backend
Port: 5000

[1/2] Starting Flask server...
  Python: C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\venv\Scripts\python.exe
  App: C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py
  Process started (PID: 21696)
  Waiting for server to start (10 seconds)...
✗ Server failed to start
  stdout: 
  stderr:   File "C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py", line 4
    from routes.add-to-cart_routes import add-to-cart_bp
                   ^
SyntaxError: invalid syntax


[2/2] Checking for errors...
  ✗ Found crash error

  Attempting to fix: crash error in N/A

  Fix suggestion from LLM:
  PROBLEM:
The issue here is that the filename `add-to-cart_routes.py` contains a hyphen, which is not a valid character in Python module names. When Python tries to import a module, it interprets the hyphen as a subtraction operator, resulting in a `SyntaxError`. To fix this, we need to rename the file to a valid Python module name.

SOLUTION:
To fix this issue, we need to rename the file `add-to-cart_routes.py` to a valid Python module name, such as `add_to_cart_routes.py`. We also need to updat...
